syntax = "proto3";

package weewar.v1;

import "google/protobuf/field_mask.proto";
import "weewar/v1/models/models.proto";
import "weewar/v1/models/user_service.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/panyam/turnengine/games/weewar/gen/go/weewar/v1/services";

// UsersService manages the user examples catalog
service UsersService {
  /**
   * Create a new user
   */
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/v1/users",
      body: "*",
    };
  }

  /**
   * Batch get multiple users by ID
   */
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) { 
    option (google.api.http) = {
      get: "/v1/users:batchGet"
    };
  }

  // ListUsers returns all available users
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {
      get: "/v1/users"
    };
  }

  // GetUser returns a specific user with metadata
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/v1/users/{id}"
    };
  }

  /**
   * Delete a particular user
   */
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) { 
    option (google.api.http) = {
      delete: "/v1/users/{id=*}"
    };
  }


  // GetUser returns a specific user with metadata
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
    option (google.api.http) = {
      patch: "/v1/users/{user.id=*}"
      body: "*"
    };
  }
}
